<resources>
    <string name="app_name">SpaceTraders</string>
    <string name="action_settings">Settings</string>
    <string name="this_is_a_string_name">LEAVE MARKET</string>
    <string name="we">SPACE TRADER</string>
    <string name="are">NEW GAME</string>
    <string name="gonna">LOAD GAME</string>
    <string name="get">image</string>
    <string name="an">Create A New Character</string>
    <string name="big">Pilot Name</string>
    <string name="fat">eg.Bob the Destroyer</string>
    <string name="A">temp text</string>
    <string name="in">SKILLS</string>
    <string name="CS">-</string>
    <string name="twothreefourzero">4</string>
    <string name="aawwww">+</string>
    <string name="awww">PILOT</string>
    <string name="i">FIGHTER</string>
    <string name="donot">TRADER</string>
    <string name="like">ENGINEER</string>
    <string name="these">SKILL POINTS</string>
    <string name="inspection">REMAINING</string>
    <string name="results">0</string>
    <string name="and">DIFFICULTY</string>
    <string name="why">CONTINUE</string>
    <string name="did">MARKET</string>
    <string name="daniel">BUY</string>
    <string name="have">ITEM</string>
    <string name="to">STOCK</string>
    <string name="hard">PRICE</string>
    <string name="code">SELL</string>
    <string name="strings">CREDIT: </string>
    <string name="SUGAR">CARGO SPACE: </string>
    <string name="OREOS">CANCEL</string>
    <string name="REESE">CONFIRM</string>
    <string name="CHOCOLATE">HOW MUCH?</string>
    <string name="CHICKEN">UNIVERSE MAP</string>
    <string name="FROYO">SYSTEM MAP</string>
    <string name="VALINA">INVENTORY</string>
    <string name="CUPCAKE">STATUS</string>
    <string name="MUFFIN">SHIP: </string>
    <string name="COOKIE">WEAPON: </string>
    <string name="FRAPPCHINO">SHIELDS</string>
    <string name="LEMONADE">GADGETS</string>
    <string name="STRAWBERRY_SHORTCAKE">CARGO</string>
    <string name="PEACH_RINGS">MAX FUEL</string>
    <string name="SKITTLES">CREW</string>
    <string name="NERDS">SHIPYARD</string>
    <string name="CHIPS">PURCHASE</string>
    <string name="SHIPS">ENGAGE THRUSTERS</string>
    <string name="HIPS">MAP</string>
    <string name="FRIES">SETTINGS</string>
    <string name="PORK_BURGER">WALLET</string>
    <string name="KETCHUP">LOCAL UNIVERSE MAP</string>
    <string name="SUSHI">NAME: </string>
    <string name="SASHIMI">DISTANCE: </string>
    <string name="NOODLES">COORDINATES: </string>
    <string name="PASTA">ENGAGE WARP DRIVE</string>
    <string name="MARSHMALLOWS">CURRENT RANGE</string>
    <string name="PLANET">PLANET</string>
    <string name="OOHHH">✖</string>
    <string name="NNOOO">↻</string>
    <string name="PPHHH">> MARKET</string>
    <string name="SSQQQ">> SHIPYARD</string>
    <string name="MNMS">> UPGRADE</string>
    <string name="PREZELS">> REFUEL</string>
    <string name="CHEERIOS">> SAVE</string>
    <string name="PANCAKE">> LOAD</string>
    <string name="MAPLE_SYRUP">✖</string>
    <string name="PEACHES">✖</string>



</resources>
