<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/ship_image"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_weight=".5"
        android:adjustViewBounds="false"
        android:contentDescription="@string/get"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ship_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:layout_gravity="start"
                android:text="@string/MAPLE_SYRUP"
                android:textColor="@color/colorText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/ship_name_display"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:layout_gravity="start"
                android:textColor="@color/colorText"
                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ship_cost"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:layout_gravity="start"
                android:text="@string/PEACHES"
                android:textColor="@color/colorText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/ship_cost_display"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:layout_gravity="start"
                android:textColor="@color/colorText"
                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ship_weapons"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:layout_gravity="start"
                android:text="@string/COOKIE"
                android:textColor="@color/colorHint"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/ship_weapons_display"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:layout_gravity="start"
                android:textColor="@color/colorText"
                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ship_shields"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:layout_gravity="start"
                android:text="@string/FRAPPCHINO"
                android:textColor="@color/colorHint"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/ship_shields_display"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:layout_gravity="start"
                android:textColor="@color/colorText"
                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ship_gadgets"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:layout_gravity="start"
                android:text="@string/LEMONADE"
                android:textColor="@color/colorHint"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/ship_gadgets_display"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:layout_gravity="start"
                android:textColor="@color/colorText"
                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ship_cargo_holds"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:layout_gravity="start"
                android:text="@string/STRAWBERRY_SHORTCAKE"
                android:textColor="@color/colorHint"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/ship_cargo_holds_display"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:layout_gravity="start"
                android:textColor="@color/colorText"
                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ship_max_fuel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:layout_gravity="start"
                android:text="@string/PEACH_RINGS"
                android:textColor="@color/colorHint"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/ship_max_fuel_display"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:layout_gravity="start"
                android:textColor="@color/colorText"
                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ship_crew"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:layout_gravity="start"
                android:text="@string/SKITTLES"
                android:textColor="@color/colorHint"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/ship_crew_display"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:layout_gravity="start"
                android:textColor="@color/colorText"
                android:textSize="20sp" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_gravity="start"
            android:textColor="@color/colorHint"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorText" />

    </LinearLayout>

</LinearLayout>